# mistral-hospitality-finetune

./: .gitignore  README.md  pyproject.toml
api/: __init__.py  main.py
demo/: README.md  app.py  requirements.txt
notebooks/: Mistral_QLoRA.ipynb
src/: __init__.py  evaluate.py  evaluate_llm.py  inference.py  merge.py  train.py
tests/: conftest.py  test_api.py  test_data.py  test_inference.py
